[project]
name = "my-homepage-server"
version = "0.1.0"
description = ""
authors = [
    {name = "RaphaVBueno",email = "rafavbueno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
